_archive/desktop-sync/1.3/concepts/desktopsync-using.md
---
author: Alfresco Documentation
audience: 
---

# Using Desktop Sync for Windows

Desktop Sync for Windows is easy to set up and use. Just follow the instructions and in no time you'll have Alfresco Content Services content synced with your desktop.

With Desktop Sync, you have the latest information instantly. You can view, share, and edit any kind of file, wherever you are, online or offline.

**Get started with Desktop Sync**

If you want to use Desktop Sync on your desktop, you'll need:

-   Windows 10: 64-bit or 32-bit version
-   Windows 7: 64-bit or 32-bit version

Click each step of the sync process flow to learn more about it.

1.  [Install Desktop Sync](../tasks/ds-install-app.md) using the setup wizard
2.  [Log in to Desktop Sync](../tasks/ds-setup.md)
3.  [Select the content to sync](../tasks/ds-select-sync.md) between Share/Digital Workspace and your desktop
4.  [Begin syncing](../tasks/ds-select-sync.md#initial) the selected Share/Digital Workspace files and folders to your desktop
5.  [Files and folders are synced](ds-working.md#icons) between Share/Digital Workspace and your desktop

-   **[Installing Desktop Sync](../tasks/ds-install-app.md)**  
Desktop Sync is quick and easy to install.
-   **[Setting up Desktop Sync](../tasks/ds-setup.md)**  
The first time you open Desktop Sync you need to enter your login details to connect to Alfresco.
-   **[Selecting content to sync](../tasks/ds-select-sync.md)**  
Once you've set up Desktop Sync, all your Alfresco Content Services folders are displayed from My Files, Shared Files, and My Sites.
-   **[Working with Desktop Sync](../concepts/ds-working.md)**  
To save your work in Alfresco, just work on your files in the C:\\Users\\<username\>\\Alfresco folder, and everything in the folder will be automatically synced to Alfresco.
-   **[Desktop Sync options](../references/ds-taskbar.md)**  
You can access Desktop Sync from the Windows system tray.
-   **[Desktop Sync FAQs](../references/ds-faqs42.md)**  
Here's a list of common questions about Desktop Sync.

**Parent topic:**[Alfresco Desktop Sync](../concepts/ds-overview.md)

